Update: Resume & configs

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
     <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="What&rsquo;s up bois It is just me">
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="About Me An undergraduate student, while also being an amateur Rustacean. Love diving into the deep space of Science, Programming Languages &amp; Knowledge. Awards / Certifications AWS Cloud Practitioner TOEFL - 91 TOEIC - 975 Education National Chengchi University, Taiwan Economics (Primary Major) Electro-Physics (Double Major) Applied Mathematics (Minor) Courses Taken Introduction to Quantum Computing Course sponsored by IBM Quantum Projects OT_Calculator: A mobile application for calculating Extra Duty Pay based on certain criteria.">
 <title></title>
 
 <link rel='canonical' href='http://localhost:1313/about/'>
 
 <link rel="stylesheet" href="/scss/style.min.663803bebe609202d5b39d848f2d7c2dc8b598a2d879efa079fa88893d29c49c.css"><meta property='og:title' content="">
-<meta property='og:description' content="What&rsquo;s up bois It is just me">
+<meta property='og:description' content="About Me An undergraduate student, while also being an amateur Rustacean. Love diving into the deep space of Science, Programming Languages &amp; Knowledge. Awards / Certifications AWS Cloud Practitioner TOEFL - 91 TOEIC - 975 Education National Chengchi University, Taiwan Economics (Primary Major) Electro-Physics (Double Major) Applied Mathematics (Minor) Courses Taken Introduction to Quantum Computing Course sponsored by IBM Quantum Projects OT_Calculator: A mobile application for calculating Extra Duty Pay based on certain criteria.">
 <meta property='og:url' content='http://localhost:1313/about/'>
 <meta property='og:site_name' content='Space Traveler&#39;s Blog'>
 <meta property='og:type' content='article'><meta property='article:section' content='' />
 <meta name="twitter:title" content="">
-<meta name="twitter:description" content="What&rsquo;s up bois It is just me">
+<meta name="twitter:description" content="About Me An undergraduate student, while also being an amateur Rustacean. Love diving into the deep space of Science, Programming Languages &amp; Knowledge. Awards / Certifications AWS Cloud Practitioner TOEFL - 91 TOEIC - 975 Education National Chengchi University, Taiwan Economics (Primary Major) Electro-Physics (Double Major) Applied Mathematics (Minor) Courses Taken Introduction to Quantum Computing Course sponsored by IBM Quantum Projects OT_Calculator: A mobile application for calculating Extra Duty Pay based on certain criteria.">
   
 
 
@@ -272,8 +272,67 @@ unicode: "ec8c"
     <section class="article-content">
     
     
-    <h1 id="whats-up-bois">What&rsquo;s up bois
-</h1><p>It is just me</p>
+    <h1 id="about-me">About Me
+</h1><p>An undergraduate student, while also being an amateur Rustacean. <!-- raw HTML omitted -->
+Love diving into the deep space of Science, Programming Languages &amp; Knowledge.</p>
+<h2 id="awards--certifications">Awards / Certifications
+</h2><ul>
+<li>AWS Cloud Practitioner</li>
+<li>TOEFL - 91</li>
+<li>TOEIC - 975</li>
+</ul>
+<h2 id="education">Education
+</h2><h3 id="national-chengchi-university-taiwan"><strong>National Chengchi University, Taiwan</strong>
+</h3><!-- raw HTML omitted -->
+<ul>
+<li><code>Economics</code> (Primary Major)</li>
+<li><code>Electro-Physics</code> (Double Major)</li>
+<li><code>Applied Mathematics</code> (Minor)</li>
+</ul>
+<h3 id="courses-taken">Courses Taken
+</h3><ul>
+<li><strong>Introduction to Quantum Computing Course</strong> sponsored by IBM Quantum</li>
+</ul>
+<!-- raw HTML omitted -->
+<h2 id="projects">Projects
+</h2><ul>
+<li><strong>OT_Calculator</strong>: <!-- raw HTML omitted -->
+A mobile application for calculating Extra Duty Pay based on certain criteria. <!-- raw HTML omitted -->
+Written in Kotlin Multiplatform. Utilizing:
+<ul>
+<li><a class="link" href="https://www.jetbrains.com/compose-multiplatform/"  target="_blank" rel="noopener"
+    >Compose Multiplatform</a> as front-end framework</li>
+<li><a class="link" href="https://github.com/InsertKoinIO/koin"  target="_blank" rel="noopener"
+    >Koin</a> for Dependecy Injection</li>
+<li><a class="link" href="https://github.com/sqldelight/sqldelight"  target="_blank" rel="noopener"
+    >SQLDelight</a> for Storage</li>
+</ul>
+</li>
+</ul>
+<!-- raw HTML omitted -->
+<h2 id="skills">Skills
+</h2><!-- raw HTML omitted -->
+<ul>
+<li>Rust - Constantly Learning</li>
+<li>Kotlin - Mobile Application Developement</li>
+<li>Python - Basic Data Analysis</li>
+<li>Linux - Some CLI commands</li>
+</ul>
+<!-- raw HTML omitted -->
+<h2 id="miscellaneous">Miscellaneous
+</h2><ul>
+<li>Languages:
+<ul>
+<li>Mandarin - Native</li>
+<li>Taiwanese - Native</li>
+<li>English - Working Proficiency</li>
+</ul>
+<!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
+</li>
+</ul>
+<!-- raw HTML omitted -->
 
 </section>
 
